vbnc/vbnc/tests/Errors/30200-3.vb
Public Class SomeClass

    Public MustOverride Property Prop As New System.Collections.Generic.List(Of String)

End Class